--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
 
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
