--- a/style.css
+++ b/style.css
@@ -48,16 +48,14 @@ body {
   width: 10%;
 }
 
-.cls-22, .cls-23, .cls-24, .cls-25,
 .moonblossom {
-  font-family: "moonblossom", sans-serif;
+  font-family: "MOONBLOSSOM", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-.cls-9, .cls-10, .cls-11, .cls-12, .cls-13, .cls-14, .cls-15,
 .chaloops {
-  font-family: "chaloops", sans-serif;
+  font-family: "Chaloops", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -70,7 +68,7 @@ body {
 
 .cls-29,
 .modernLove {
-  font-family: "modern-love", sans-serif;
+  font-family: "Modern Love", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
