--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 html,
@@ -41,7 +41,20 @@ body {
 }
 
 .testo {
-  width: 70%;
+  width: 90%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#data {
+  display: flex;
+  flex-direction: row;
+  width: 75%;
+  align-items: center;
+  font-size: 38px;
 }
 
 .bolla {
@@ -49,15 +62,40 @@ body {
 }
 
 .moonblossom {
-  font-family: "MOONBLOSSOM", sans-serif;
+  font-family: "moonblossom", sans-serif;
   font-weight: 400;
   font-style: normal;
+
+  color: #155e60;
+  font-size: 30px;
+}
+
+#numero {
+  color: #e94e1b;
+  font-size: 72px;
+
+  background-image: url("img/Sfondo15.svg");
+  background-position: center center;
+  background-repeat: no-repeat;
+
+  width: 1.5em;
+  margin: 8px;
+}
+
+#mese {
+    font-size: 30px;
+}
+
+#conferma {
+    font-size: 23px;
 }
 
 .chaloops {
-  font-family: "Chaloops", sans-serif;
+  font-family: "chaloops", sans-serif;
   font-weight: 400;
   font-style: normal;
+  color: #155e60;
+  font-size: 30px;
 }
 
 /* .sharktooth {
@@ -66,9 +104,10 @@ body {
   font-style: normal;
 } */
 
-.cls-29,
 .modernLove {
-  font-family: "Modern Love", sans-serif;
+  font-family: "modern-love", sans-serif;
   font-weight: 400;
   font-style: normal;
+  color: #23aabc;
+  font-size: 103px;
 }
