--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 }
 
 .papera {
-  width: 70%;
+  max-width: 70%;
 }
 
 .testo {
@@ -127,7 +127,6 @@ body {
 
     .papera {
         width: 50%;
-
         margin: 20px;
     }
 }
