--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
   font-weight: 400;
   font-style: normal;
   color: #155e60;
-  font-size: 30px;
+  font-size: 26px;
 }
 
 /* .sharktooth {
@@ -117,11 +117,12 @@ body {
   font-style: normal;
   color: #23aabc;
   font-size: 103px;
-  line-height: 1.4em;
+  line-height: 1.1em;
 }
 
 #indirizzo {
-    max-width: 90%;
+    /* max-width: 90%; */
+    font-size: 26px;
 }
 
 #indirizzo:hover,
