--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
   font-style: normal;
 
   color: #155e60;
-  font-size: 30px;
+  font-size: 28px;
 }
 
 #numero {
@@ -82,11 +82,11 @@ body {
 
   width: 1.5em;
   margin: 0 8px;
-  padding: 10px;
+  padding: 0 10px;
 }
 
 #mese {
-    font-size: 30px;
+    font-size: 28px;
 }
 
 #ora {
@@ -103,7 +103,7 @@ body {
   font-weight: 400;
   font-style: normal;
   color: #155e60;
-  font-size: 26px;
+  font-size: 24px;
 }
 
 /* .sharktooth {
@@ -123,7 +123,7 @@ body {
 
 #indirizzo {
     /* max-width: 90%; */
-    font-size: 26px;
+    font-size: 24px;
 }
 
 #indirizzo:hover,
